@@ -403,6 +403,8 @@ namespace WebCore {
 
         DECLARE_CALLBACK(NodeFilterAcceptNode);
 
+        DECLARE_PROPERTY_ACCESSOR(HTMLDataGridElementDataSource);
+
         DECLARE_CALLBACK(HTMLFormElementSubmit);
 
         DECLARE_NAMED_PROPERTY_GETTER(DOMWindow);
